--- a/LaunchLocker.Tests/LaunchLocker.Tests.csproj
+++ b/LaunchLocker.Tests/LaunchLocker.Tests.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="7.0.7" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="7.0.7" />
   </ItemGroup>
 
   <ItemGroup>
