--- a/LaunchLocker.UI/LaunchLocker.UI.csproj
+++ b/LaunchLocker.UI/LaunchLocker.UI.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IO.Abstractions" Version="7.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LaunchLocker.Library\LaunchLocker.Library.csproj" />
   </ItemGroup>
 
