--- a/LaunchLocker.Library/LaunchLocker.Library.csproj
+++ b/LaunchLocker.Library/LaunchLocker.Library.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.IO.Abstractions" Version="7.0.7" />
   </ItemGroup>
 
