--- a/LaunchLocker.Interface/LaunchLocker.Interface.csproj
+++ b/LaunchLocker.Interface/LaunchLocker.Interface.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.IO.Abstractions" Version="7.0.7" />
+    <PackageReference Include="System.Text.Json" Version="4.6.0" />
   </ItemGroup>
 
 </Project>
