--- a/LaunchLocker.UI/LaunchLocker.UI.csproj
+++ b/LaunchLocker.UI/LaunchLocker.UI.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <StartupObject>LaunchLocker.UI.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
