fixed "hosted service not terminating" bug

--- a/LaunchLocker.UI/appsettings.json
+++ b/LaunchLocker.UI/appsettings.json
@@ -1,8 +1,12 @@
 {
-    "Settings": 
-    {
+    "Settings": {
         "ProblemIndicators": [
             "conflict"
         ]
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
     }
 }
