--- a/LaunchLocker.Interface/LaunchLocker.Interface.csproj
+++ b/LaunchLocker.Interface/LaunchLocker.Interface.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LanguageExt.Core" Version="4.2.9" />
     <PackageReference Include="System.IO.Abstractions" Version="17.0.24" />
     <PackageReference Include="System.Text.Json" Version="6.0.5" />
   </ItemGroup>
